// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should initialize client with syncables and context data 1`] = `
Array [
  Object {
    "_clock": 0,
    "_createdAt": 0,
    "_id": "user-1",
    "_type": "user",
    "_updatedAt": 0,
    "group": "group-1",
  },
]
`;

exports[`should query tasks 1`] = `
Array [
  Object {
    "_clock": 0,
    "_createdAt": 0,
    "_id": "task-1",
    "_type": "task",
    "_updatedAt": 0,
    "brief": "This is task 1",
    "group": "group-1",
  },
  Object {
    "_clock": 0,
    "_createdAt": 0,
    "_id": "task-2",
    "_type": "task",
    "_updatedAt": 0,
    "brief": "This is task 2",
    "group": "group-1",
  },
]
`;

exports[`should request single task 1`] = `
Object {
  "_clock": 0,
  "_createdAt": 0,
  "_id": "task-1",
  "_type": "task",
  "_updatedAt": 0,
  "brief": "This is task 1",
  "group": "group-1",
}
`;

exports[`should request tasks 1`] = `
Array [
  Object {
    "_clock": 0,
    "_createdAt": 0,
    "_id": "task-1",
    "_type": "task",
    "_updatedAt": 0,
    "brief": "This is task 1",
    "group": "group-1",
  },
  Object {
    "_clock": 0,
    "_createdAt": 0,
    "_id": "task-2",
    "_type": "task",
    "_updatedAt": 0,
    "brief": "This is task 2",
    "group": "group-1",
  },
]
`;

exports[`should update task brief: confirmed-update 1`] = `
Object {
  "_clock": 1,
  "_createdAt": 0,
  "_id": "task-2",
  "_type": "task",
  "_updatedAt": 1500000000240,
  "brief": "New brief for task 2",
  "group": "group-1",
}
`;

exports[`should update task brief: local-update 1`] = `
Object {
  "_clock": 0,
  "_createdAt": 0,
  "_id": "task-2",
  "_type": "task",
  "_updatedAt": 1500000000160,
  "brief": "New brief for task 2",
  "group": "group-1",
}
`;
